# fastsales

./: .gitignore  Cargo.toml  Makefile  README.md  openapi.json
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_add_customer_details.sql  0002_add_product_details.sql  0003_migrate_sales_data.sql  0003_rename_sales_to_sale_items.sql  0004_create_sales_table.sql  0004_refactor_staff_schema.sql  0005_add_product_name_to_sale_items.sql  0006_add_price_per_item_to_sale_items.sql  0007_optional_customer_id.sql
backend/src/: auth.rs  handlers.rs  main.rs
frontend/: Cargo.toml  leptos.toml
frontend/assets/: placeholder.txt
frontend/src/: lib.rs  utils.rs
frontend/src/components/: button.rs  input.rs  layout.rs  mod.rs  sidebar.rs
frontend/src/pages/: customers.rs  home.rs  login.rs  mod.rs  products.rs  profile.rs  reports.rs  sales.rs  staff.rs  staff_sales.rs
frontend/style/: main.css
migrations/: 0001_init.sql
shared/: Cargo.toml
shared/src/: models.rs
src/: handlers.rs  main.rs  models.rs
