[package]
name = "fastsales"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
jsonwebtoken = "9"
utoipa = { version = "5", features = ["uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "migrate"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
