[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
frontend = { path = "../frontend", features = ["ssr"] }
shared = { path = "../shared" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }


tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
jsonwebtoken = "9"
utoipa = { version = "5", features = ["uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "migrate", "chrono"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
leptos = { version = "0.6", features = ["ssr"] }
leptos_axum = "0.6"
leptos_config = "0.6"
leptos_meta = { version = "0.6", features = ["ssr"] }
leptos_router = { version = "0.6", features = ["ssr"] }
tower-http = { version = "0.5", features = ["fs"] }
serde_json = "1"

