[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]



[dependencies]
leptos = { version = "0.6" }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
shared = { path = "../shared" }
utoipa = { version = "5", features = ["uuid"] }
web-sys = { version = "0.3", features = ["MouseEvent", "Storage", "Window"] }
chrono = "0.4"
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.5"
wasm-bindgen-futures = "0.4"
uuid = { version = "1", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["MouseEvent", "Storage", "Window"] }


[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
